--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@discordjs/opus": "^0.8.0",
     "@discordjs/voice": "^0.11.0",
     "discord.js": "^14.2.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "ffmpeg-static": "^5.0.2",
+    "libsodium-wrappers": "^0.7.10",
+    "tweetnacl": "^1.0.3",
+    "ytdl-core": "^4.11.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
