--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "ffmpeg-static": "^5.0.2",
     "libsodium-wrappers": "^0.7.10",
     "tweetnacl": "^1.0.3",
-    "ytdl-core": "^4.11.0"
+    "ytdl-core": "4.9.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
