--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "dotenv": "^16.0.1",
     "ffmpeg-static": "^5.0.2",
     "libsodium-wrappers": "^0.7.10",
-    "tweetnacl": "^1.0.3",
-    "ytdl-core": "^4.11.1"
+    "play-dl": "^1.9.5",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
